--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,37 @@
-<div class="container">
+<div class="main">
+  <mat-toolbar color="primary" class="mat-elevation-z5">
+    <mat-toolbar-row class="container">
+      <button mat-icon-button (click)="sidenav.toggle()" fxShow="true" fxHide.gt-sm>
+        <mat-icon>menu</mat-icon>
+      </button>
+      <img src="./../assets/images/lodashangular.png" alt="img" class="logo" (click)="navigateToDefault()" />
+      <span class="menu-spacer"></span>
+      <span>Dorado Solutions</span>
+    </mat-toolbar-row>
+  </mat-toolbar>
 
-  {{result}}
+  <mat-sidenav-container class="example-sidenav-container">
+    <mat-sidenav #appDrawer #sidenav mode="over" opened="false" class="w-75">
+      <div class="m-1">
+        <div class="column" fxLayoutGap="1rem">
+          <array-component></array-component>
+        </div>
+      </div>
+    </mat-sidenav>
 
-
-  <router-outlet></router-outlet>
+    <mat-sidenav-content>
+      <div class="container" fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="2rem">
+        <div fxFlex="20" fxHide="true" fxShow.gt-sm>
+          <div class="column mt-3" fxLayoutGap="1rem">
+            <array-component></array-component>
+          </div>
+        </div>
+        <div fxFlex="80">
+          <div class="mt-3">
+            <router-outlet></router-outlet>
+          </div>
+        </div>
+      </div>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
 </div>
