--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
       <button mat-icon-button (click)="sidenav.toggle()" fxShow="true" fxHide.gt-sm>
         <mat-icon>menu</mat-icon>
       </button>
-      <img src="./../assets/images/lodashangular.png" alt="img" class="logo" (click)="navigateToDefault()" />
+      <img src="assets/images/lodashangular.png" alt="img" class="logo" (click)="navigateToDefault()" />
       <span class="menu-spacer"></span>
       <span>Dorado Solutions</span>
     </mat-toolbar-row>
