--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,16 +20,14 @@
     </mat-sidenav>
 
     <mat-sidenav-content>
-      <div class="container" fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="2rem">
+      <div class="m-3" fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="2rem">
         <div fxFlex="20" fxHide="true" fxShow.gt-sm>
-          <div class="column mt-3" fxLayoutGap="1rem">
+          <div fxLayoutGap="1rem">
             <array-component></array-component>
           </div>
         </div>
         <div fxFlex="80">
-          <div class="mt-3">
-            <router-outlet></router-outlet>
-          </div>
+          <router-outlet></router-outlet>
         </div>
       </div>
     </mat-sidenav-content>
