--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,3 +4,9 @@
 * {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+
+.codeEdit{
+  background: #202020;
+  color: #ffffff;
+}
